test/test-files/analyzer/methods/error-method-not-existing/exception.out
Semantic error in : ./test-files/analyzer/methods/error-method-not-existing/source.spice:12:14:
Referenced undefined function: Function/Procedure 'Test.getInt()' could not be found

12  result = test.getInt();
             ^^^^^^^^^^^^^